@@ -4,13 +4,14 @@ require_relative 'apply_to_range'
 module ExcelFunctions
   
   def power(a,b)
-    # return apply_to_range(a,b) { |a,b| power(a,b) } if a.is_a?(Array) || b.is_a?(Array)
-    
     a = number_argument(a)
     b = number_argument(b)
     
     return a if a.is_a?(Symbol)
     return b if b.is_a?(Symbol)
+
+    return 1 if b ==0 # Special case so can do the following negative number check
+    return :num if a < 1 && b < 1
     
     a**b
   end
